# copilot-developed-engine-test

./: .gitignore  CMakeLists.txt  CMakePresets.json  NOTICE.md  README.md  imgui.ini
.github/: copilot-instructions.md
Future Work/: LLM-Cpp-Quality-Guardrails.md
Models/: sample_character.fbx
Models/DogKnight/Scene/: Scene01.unity
src/Engine/: CMakeLists.txt
src/Engine/include/Engine/: Application.hpp  DirectX12Renderer.hpp  FbxLoader.hpp  ModelData.hpp  NativeDx12Renderer.hpp  Renderer.hpp  RendererBackendSelection.hpp  ShaderLoader.hpp  ShaderProfiles.hpp  SoftwareRenderer.hpp  VulkanRenderer.hpp
src/Engine/shaders/dx12/: Textured.ps.hlsl  Textured.vs.hlsl  Wireframe.vs.hlsl
src/Engine/src/: Application.cpp  DirectX12Renderer.cpp  FbxLoader.cpp  NativeDx12Renderer.cpp  RendererBackendSelection.cpp  SdlRendererBase.cpp  SdlRendererBase.hpp  ShaderLoader.cpp  SoftwareRenderer.cpp  VulkanRenderer.cpp
src/Sandbox/: CMakeLists.txt
src/Sandbox/src/: main.cpp
tests/: CMakeLists.txt
tests/HumanDeveloperTests/: CMakeLists.txt  README.md
tests/HumanDeveloperTests/src/: main.cpp
tests/integration/: FbxLoaderIntegrationTests.cpp
tests/unit/: ModelDataTests.cpp  RendererBackendSelectionTests.cpp
